// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppDetail should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        will-test-dev-co-voracious-person
      </h1>
      <h2
        class="el-text-base el-subtitle"
      >
        Authenticating Your App
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Client-side Apps use our identity provider
         
        <a>
          Reapit Connect
        </a>
         to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
         
        <a>
          Authorization Code flow.
        </a>
         You will need the Client Id and Redirect Uris below to configure Reapit Connect.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        To make this process easier, we provide you with an authentication module for client-side apps,
         
        <a>
          Connect Session
        </a>
        , which comes bundled with our
         
        <a>
          Create React App Template
        </a>
         for quick start client-side development.
      </p>
      <div
        class="mocked-styled-30 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name lockedInfographic"
                viewBox="0 0 40 40"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 21h11v13H12z"
                  fill="#d8dee4"
                />
                <path
                  d="M29.721 16.81h-1.563V11.07c0-5.282-4.775-9.569-10.658-9.569S6.842 5.787 6.842 11.069v5.741H5.28c-.71 0-1.279.51-1.279 1.149v19.393c0 .625.568 1.148 1.279 1.148h24.442c.71 0 1.279-.523 1.279-1.148V17.959c0-.638-.568-1.149-1.279-1.149m-15.774 9.57c0-1.761 1.592-3.19 3.553-3.19s3.553 1.429 3.553 3.19c0 1.02-.526 1.951-1.421 2.551v2.552c0 1.059-.953 1.914-2.132 1.914s-2.132-.855-2.132-1.914V28.93c-.895-.6-1.42-1.531-1.42-2.552m-2.842-15.311c0-3.164 2.87-5.741 6.395-5.741s6.395 2.577 6.395 5.741v5.741h-12.79z"
                  fill="#9faebc"
                />
                <circle
                  cx="23.5"
                  cy="11"
                  fill="#fff"
                  r="2.5"
                />
                <path
                  d="m30.841 31.04-.904 2.604L35.19 35.5 37 30.294l-5.599-11.477c1.516-2.24 1.809-5.206.517-7.854-1.895-3.885-6.624-5.555-10.509-3.713s-5.513 6.528-3.618 10.412a8.04 8.04 0 0 0 6.547 4.505l.43.883 2.627.928-.904 2.603 2.627.928-.904 2.603zM21.366 11.62c-.43-.883.021-2.185.904-2.603.883-.42 2.197.045 2.628.928.517 1.06-.022 2.184-.905 2.603-1.06.502-2.11.131-2.627-.928"
                  fill="#798da1"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Authentication Client Id
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text"
              >
                MOCK_EXTERNAL_ID
              </p>
            </div>
          </div>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Copy
          </button>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name myAppsInfographic"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M66.74 35.076 39.999 25.65v18.992z"
                  fill="#607890"
                />
                <path
                  d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567z"
                  fill="#9faebc"
                />
                <path
                  d="M50.579 7.466H28.61c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952"
                  fill="#d8dee4"
                />
                <path
                  d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664"
                  fill="#d8dee4"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935z"
                  fill="#506478"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24z"
                  fill="#8EDDFF"
                />
                <path
                  d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526z"
                  fill="#9faebc"
                />
                <path
                  d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349z"
                  fill="#798da1"
                />
                <path
                  d="M66.74 69.576v-34.5l-26.741 9.593V78.2z"
                  fill="#506478"
                />
                <path
                  d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624z"
                  fill="#607890"
                />
                <path
                  d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638z"
                  fill="#d8dee4"
                />
                <path
                  d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638z"
                  fill="#7e9bfa"
                />
                <path
                  d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638z"
                  fill="#798da1"
                />
                <path
                  d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448z"
                  fill="#7e9bfa"
                />
                <path
                  d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47z"
                  fill="#fff"
                />
                <path
                  d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.565l1.427-4.475a2.464 2.464 0 0 0-1.59-3.084z"
                  fill="#d8dee4"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                App Id
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
              >
                MOCK_APP_ID
              </p>
            </div>
          </div>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Copy
          </button>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Redirect Uri(s)
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
          >
            https://foo.bar
          </p>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Sign Out Uri(s)
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
          >
            https://foo.bar
          </p>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="mocked-styled-31 el-col"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Integration Type
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              You have a client side authenticated integration that will not render within the Reapit CRM
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="mocked-styled-31 el-col"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              App Status
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              Your app is live and public in the AppMarket with a pending revision under review
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Permissions
          </h2>
          <mock-styled.div>
            Read applicants
          </mock-styled.div>
          <mock-styled.div>
            Read properties
          </mock-styled.div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      will-test-dev-co-voracious-person
    </h1>
    <h2
      class="el-text-base el-subtitle"
    >
      Authenticating Your App
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Client-side Apps use our identity provider
       
      <a>
        Reapit Connect
      </a>
       to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
       
      <a>
        Authorization Code flow.
      </a>
       You will need the Client Id and Redirect Uris below to configure Reapit Connect.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      To make this process easier, we provide you with an authentication module for client-side apps,
       
      <a>
        Connect Session
      </a>
      , which comes bundled with our
       
      <a>
        Create React App Template
      </a>
       for quick start client-side development.
    </p>
    <div
      class="mocked-styled-30 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name lockedInfographic"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 21h11v13H12z"
                fill="#d8dee4"
              />
              <path
                d="M29.721 16.81h-1.563V11.07c0-5.282-4.775-9.569-10.658-9.569S6.842 5.787 6.842 11.069v5.741H5.28c-.71 0-1.279.51-1.279 1.149v19.393c0 .625.568 1.148 1.279 1.148h24.442c.71 0 1.279-.523 1.279-1.148V17.959c0-.638-.568-1.149-1.279-1.149m-15.774 9.57c0-1.761 1.592-3.19 3.553-3.19s3.553 1.429 3.553 3.19c0 1.02-.526 1.951-1.421 2.551v2.552c0 1.059-.953 1.914-2.132 1.914s-2.132-.855-2.132-1.914V28.93c-.895-.6-1.42-1.531-1.42-2.552m-2.842-15.311c0-3.164 2.87-5.741 6.395-5.741s6.395 2.577 6.395 5.741v5.741h-12.79z"
                fill="#9faebc"
              />
              <circle
                cx="23.5"
                cy="11"
                fill="#fff"
                r="2.5"
              />
              <path
                d="m30.841 31.04-.904 2.604L35.19 35.5 37 30.294l-5.599-11.477c1.516-2.24 1.809-5.206.517-7.854-1.895-3.885-6.624-5.555-10.509-3.713s-5.513 6.528-3.618 10.412a8.04 8.04 0 0 0 6.547 4.505l.43.883 2.627.928-.904 2.603 2.627.928-.904 2.603zM21.366 11.62c-.43-.883.021-2.185.904-2.603.883-.42 2.197.045 2.628.928.517 1.06-.022 2.184-.905 2.603-1.06.502-2.11.131-2.627-.928"
                fill="#798da1"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Authentication Client Id
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              MOCK_EXTERNAL_ID
            </p>
          </div>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Copy
        </button>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name myAppsInfographic"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 35.076 39.999 25.65v18.992z"
                fill="#607890"
              />
              <path
                d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567z"
                fill="#9faebc"
              />
              <path
                d="M50.579 7.466H28.61c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24z"
                fill="#8EDDFF"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349z"
                fill="#798da1"
              />
              <path
                d="M66.74 69.576v-34.5l-26.741 9.593V78.2z"
                fill="#506478"
              />
              <path
                d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624z"
                fill="#607890"
              />
              <path
                d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638z"
                fill="#7e9bfa"
              />
              <path
                d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638z"
                fill="#798da1"
              />
              <path
                d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448z"
                fill="#7e9bfa"
              />
              <path
                d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47z"
                fill="#fff"
              />
              <path
                d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.565l1.427-4.475a2.464 2.464 0 0 0-1.59-3.084z"
                fill="#d8dee4"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              App Id
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
            >
              MOCK_APP_ID
            </p>
          </div>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Copy
        </button>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Redirect Uri(s)
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
        >
          https://foo.bar
        </p>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Sign Out Uri(s)
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
        >
          https://foo.bar
        </p>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Integration Type
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
          >
            You have a client side authenticated integration that will not render within the Reapit CRM
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            App Status
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
          >
            Your app is live and public in the AppMarket with a pending revision under review
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Permissions
        </h2>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppDetail should match snapshot when app is client credentials 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        will-test-dev-co-voracious-person
      </h1>
      <h2
        class="el-text-base el-subtitle"
      >
        Authenticating Your App
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Client-side Apps use our identity provider
         
        <a>
          Reapit Connect
        </a>
         to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
         
        <a>
          Authorization Code flow.
        </a>
         You will need the Client Id and Redirect Uris below to configure Reapit Connect.
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
      >
        To make this process easier, we provide you with an authentication module for client-side apps,
         
        <a>
          Connect Session
        </a>
        , which comes bundled with our
         
        <a>
          Create React App Template
        </a>
         for quick start client-side development.
      </p>
      <div
        class="mocked-styled-30 el-grid"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name lockedInfographic"
                viewBox="0 0 40 40"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 21h11v13H12z"
                  fill="#d8dee4"
                />
                <path
                  d="M29.721 16.81h-1.563V11.07c0-5.282-4.775-9.569-10.658-9.569S6.842 5.787 6.842 11.069v5.741H5.28c-.71 0-1.279.51-1.279 1.149v19.393c0 .625.568 1.148 1.279 1.148h24.442c.71 0 1.279-.523 1.279-1.148V17.959c0-.638-.568-1.149-1.279-1.149m-15.774 9.57c0-1.761 1.592-3.19 3.553-3.19s3.553 1.429 3.553 3.19c0 1.02-.526 1.951-1.421 2.551v2.552c0 1.059-.953 1.914-2.132 1.914s-2.132-.855-2.132-1.914V28.93c-.895-.6-1.42-1.531-1.42-2.552m-2.842-15.311c0-3.164 2.87-5.741 6.395-5.741s6.395 2.577 6.395 5.741v5.741h-12.79z"
                  fill="#9faebc"
                />
                <circle
                  cx="23.5"
                  cy="11"
                  fill="#fff"
                  r="2.5"
                />
                <path
                  d="m30.841 31.04-.904 2.604L35.19 35.5 37 30.294l-5.599-11.477c1.516-2.24 1.809-5.206.517-7.854-1.895-3.885-6.624-5.555-10.509-3.713s-5.513 6.528-3.618 10.412a8.04 8.04 0 0 0 6.547 4.505l.43.883 2.627.928-.904 2.603 2.627.928-.904 2.603zM21.366 11.62c-.43-.883.021-2.185.904-2.603.883-.42 2.197.045 2.628.928.517 1.06-.022 2.184-.905 2.603-1.06.502-2.11.131-2.627-.928"
                  fill="#798da1"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Authentication Client Id
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text"
              >
                MOCK_EXTERNAL_ID
              </p>
            </div>
          </div>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Copy
          </button>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr4 el-icon-size-medium el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name myAppsInfographic"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M66.74 35.076 39.999 25.65v18.992z"
                  fill="#607890"
                />
                <path
                  d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567z"
                  fill="#9faebc"
                />
                <path
                  d="M50.579 7.466H28.61c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952"
                  fill="#d8dee4"
                />
                <path
                  d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664"
                  fill="#d8dee4"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935z"
                  fill="#506478"
                />
                <path
                  d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24z"
                  fill="#8EDDFF"
                />
                <path
                  d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526z"
                  fill="#9faebc"
                />
                <path
                  d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349z"
                  fill="#798da1"
                />
                <path
                  d="M66.74 69.576v-34.5l-26.741 9.593V78.2z"
                  fill="#506478"
                />
                <path
                  d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624z"
                  fill="#607890"
                />
                <path
                  d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638z"
                  fill="#d8dee4"
                />
                <path
                  d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638z"
                  fill="#7e9bfa"
                />
                <path
                  d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638z"
                  fill="#798da1"
                />
                <path
                  d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448z"
                  fill="#7e9bfa"
                />
                <path
                  d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47z"
                  fill="#fff"
                />
                <path
                  d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.565l1.427-4.475a2.464 2.464 0 0 0-1.59-3.084z"
                  fill="#d8dee4"
                />
              </svg>
            </span>
            <div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                App Id
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
              >
                MOCK_APP_ID
              </p>
            </div>
          </div>
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Copy
          </button>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Redirect Uri(s)
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
          >
            https://foo.bar
          </p>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Sign Out Uri(s)
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
          >
            https://foo.bar
          </p>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="mocked-styled-31 el-col"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Integration Type
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              You have a client side authenticated integration that will not render within the Reapit CRM
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <div
            class="mocked-styled-31 el-col"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              App Status
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              Your app is live and public in the AppMarket with a pending revision under review
            </p>
          </div>
        </div>
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Permissions
          </h2>
          <mock-styled.div>
            Read applicants
          </mock-styled.div>
          <mock-styled.div>
            Read properties
          </mock-styled.div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      will-test-dev-co-voracious-person
    </h1>
    <h2
      class="el-text-base el-subtitle"
    >
      Authenticating Your App
    </h2>
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      Client-side Apps use our identity provider
       
      <a>
        Reapit Connect
      </a>
       to authenticate against our API. Your application will need to re-direct to Reapit Connect where we will handle user login and in turn, re-direct back to your app with a code in the URL that you exchange for access and id JWTs, referred to as
       
      <a>
        Authorization Code flow.
      </a>
       You will need the Client Id and Redirect Uris below to configure Reapit Connect.
    </p>
    <p
      class="el-text-base el-body-text el-has-grey-text el-has-section-margin"
    >
      To make this process easier, we provide you with an authentication module for client-side apps,
       
      <a>
        Connect Session
      </a>
      , which comes bundled with our
       
      <a>
        Create React App Template
      </a>
       for quick start client-side development.
    </p>
    <div
      class="mocked-styled-30 el-grid"
    >
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name lockedInfographic"
              viewBox="0 0 40 40"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 21h11v13H12z"
                fill="#d8dee4"
              />
              <path
                d="M29.721 16.81h-1.563V11.07c0-5.282-4.775-9.569-10.658-9.569S6.842 5.787 6.842 11.069v5.741H5.28c-.71 0-1.279.51-1.279 1.149v19.393c0 .625.568 1.148 1.279 1.148h24.442c.71 0 1.279-.523 1.279-1.148V17.959c0-.638-.568-1.149-1.279-1.149m-15.774 9.57c0-1.761 1.592-3.19 3.553-3.19s3.553 1.429 3.553 3.19c0 1.02-.526 1.951-1.421 2.551v2.552c0 1.059-.953 1.914-2.132 1.914s-2.132-.855-2.132-1.914V28.93c-.895-.6-1.42-1.531-1.42-2.552m-2.842-15.311c0-3.164 2.87-5.741 6.395-5.741s6.395 2.577 6.395 5.741v5.741h-12.79z"
                fill="#9faebc"
              />
              <circle
                cx="23.5"
                cy="11"
                fill="#fff"
                r="2.5"
              />
              <path
                d="m30.841 31.04-.904 2.604L35.19 35.5 37 30.294l-5.599-11.477c1.516-2.24 1.809-5.206.517-7.854-1.895-3.885-6.624-5.555-10.509-3.713s-5.513 6.528-3.618 10.412a8.04 8.04 0 0 0 6.547 4.505l.43.883 2.627.928-.904 2.603 2.627.928-.904 2.603zM21.366 11.62c-.43-.883.021-2.185.904-2.603.883-.42 2.197.045 2.628.928.517 1.06-.022 2.184-.905 2.603-1.06.502-2.11.131-2.627-.928"
                fill="#798da1"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Authentication Client Id
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              MOCK_EXTERNAL_ID
            </p>
          </div>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Copy
        </button>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="el-flex-container"
        >
          <span
            class="el-mr4 el-icon-size-medium el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name myAppsInfographic"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M66.74 35.076 39.999 25.65v18.992z"
                fill="#607890"
              />
              <path
                d="M66.74 35.076 39.997 25.65l-26.74 9.425 26.74 9.567z"
                fill="#9faebc"
              />
              <path
                d="M50.579 7.466H28.61c-2.131 0-3.865 1.773-3.865 3.952V58.74c0 2.179 1.734 3.952 3.865 3.952h21.967c2.132 0 3.866-1.773 3.866-3.952V11.418c0-2.179-1.734-3.952-3.866-3.952"
                fill="#d8dee4"
              />
              <path
                d="M50.566 9.754H47.3a.563.563 0 0 0-.558.57c0 .754-.604 1.372-1.342 1.372H33.764c-.739 0-1.343-.618-1.343-1.373 0-.314-.25-.57-.558-.57H28.6c-.9 0-1.628.746-1.628 1.665v37.337h25.223V11.418c0-.919-.73-1.664-1.629-1.664"
                fill="#d8dee4"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v14.483H28.935z"
                fill="#506478"
              />
              <path
                d="m28.935 28.526 10.673-10.488L50.28 28.526v8.24z"
                fill="#8EDDFF"
              />
              <path
                d="M50.28 43.009h-6.247l-8.85-20.622 4.425-4.349L50.28 28.526z"
                fill="#9faebc"
              />
              <path
                d="M50.28 28.526v8.24l-10.672-4.068-4.425-10.311 4.425-4.349z"
                fill="#798da1"
              />
              <path
                d="M66.74 69.576v-34.5l-26.741 9.593V78.2z"
                fill="#506478"
              />
              <path
                d="m39.998 44.67-26.74-9.595v34.501l26.74 8.624z"
                fill="#607890"
              />
              <path
                d="M13.257 35.076 4 46.214l27.244 10.067 8.754-11.638z"
                fill="#d8dee4"
              />
              <path
                d="M66.74 35.076 76 46.214 48.756 56.28l-8.757-11.638z"
                fill="#7e9bfa"
              />
              <path
                d="M66.74 35.075 76 46.214 48.756 56.28l-8.757-11.638z"
                fill="#798da1"
              />
              <path
                d="M53.859 6.928c1.76-2.89 5.548-3.794 8.46-2.019l9.709 5.922c2.91 1.775 3.843 5.558 2.082 8.448l-5.968 9.793c-1.761 2.89-5.549 3.794-8.46 2.019l-9.71-5.922c-2.91-1.775-3.843-5.558-2.081-8.448z"
                fill="#7e9bfa"
              />
              <path
                d="M28.94 26.1a3.73 3.73 0 0 0-.48 5.2l3.317 4.048a3.607 3.607 0 0 0 5.13.47l3.969-3.348a3.73 3.73 0 0 0 .482-5.202L38.04 23.22a3.607 3.607 0 0 0-5.13-.47z"
                fill="#fff"
              />
              <path
                d="M15.163 13.013a2.427 2.427 0 0 0-3.072 1.566l-1.426 4.474a2.464 2.464 0 0 0 1.59 3.084l4.364 1.421a2.427 2.427 0 0 0 3.072-1.565l1.427-4.475a2.464 2.464 0 0 0-1.59-3.084z"
                fill="#d8dee4"
              />
            </svg>
          </span>
          <div>
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              App Id
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
            >
              MOCK_APP_ID
            </p>
          </div>
        </div>
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Copy
        </button>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Redirect Uri(s)
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
        >
          https://foo.bar
        </p>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Sign Out Uri(s)
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
"
        >
          https://foo.bar
        </p>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            Integration Type
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
          >
            You have a client side authenticated integration that will not render within the Reapit CRM
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <div
          class="mocked-styled-31 el-col"
        >
          <h2
            class="el-text-base el-subtitle el-has-no-margin"
          >
            App Status
          </h2>
          <p
            class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
          >
            Your app is live and public in the AppMarket with a pending revision under review
          </p>
        </div>
      </div>
      <div
        class="mocked-styled-31 el-col"
      >
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Permissions
        </h2>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppDetail should match snapshot where loading apps 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppDetail should match snapshot where no app found 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No record of this app found
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No record of this app found
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
